<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/title_chunk"
        layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/wxqrcodebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/wxqrcode"
            android:layout_width="@dimen/dp_220"
            android:layout_height="@dimen/dp_220"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_15"
            android:src="@drawable/xfkj" />
        <LinearLayout
            android:layout_width="@dimen/dp_240"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_bd1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_bd2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_bd3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_20"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_jb"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_jbff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_jb1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_jb2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:text="@string/wx_jb3"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
