<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_shape"
    android:orientation="vertical">

    <include
        android:id="@+id/title_chunk"
        layout="@layout/title_layout"/>

    <RelativeLayout
        android:id="@+id/blist_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/drives_lists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieanimation"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:lottie_autoPlay="true"
            app:lottie_fileName="bluetooth_scan.json"
            app:lottie_loop="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bbtns_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/do_connecting_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieanimation1"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="device_connecting.json"
            app:lottie_loop="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:text="@string/bluetooth_connection"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:id="@+id/connection_stocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/reinfecta_txt"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:text="@string/set_time_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:id="@+id/time_stocks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/reinfecta_txt"
                android:textColor="@color/text1"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:text="@string/set_uinfo_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:id="@+id/uinfo_stocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/reinfecta_txt"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:text="@string/set_step_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"/>

            <TextView
                android:id="@+id/step_stocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/reinfecta_txt"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>